# hippollm

./: .gitignore  LICENSE  README.md  environment.yml  install.sh  pyproject.toml  requirements.txt
configs/: mistral.yaml  openai.yaml
examples/wikipedia_Paris/: entities.json  facts.json  parameters.yaml
examples/wikipedia_Paris/entities/: chroma.sqlite3
examples/wikipedia_Paris/entities/d7cf1f66-c828-4c98-9e1d-60ad5a85949b/: index_metadata.pickle
examples/wikipedia_Paris/facts/: chroma.sqlite3
examples/wikipedia_Paris/facts/408df9ad-3a6a-475a-92aa-351659097c8e/: index_metadata.pickle
experiments/: bootstrap_wikipedia.py
hippoview/: README.md  pyproject.toml  requirements.txt
hippoview/src/hippoview/: __main__.py
hippoview/src/hippoview/app/: app.py
hippoview/src/hippoview/web/: app.html
src/: annotate.py  annotate_wikipedia.py  annotator.py  bootstrap_wikipedia.py  helpers.py  llm_backend.py  loaders.py  nlp_additional.py  prompts.py  retrieval.py  storage.py
src/hippollm/: annotate_wikipedia.py  annotator.py  grammars.py  helpers.py  llm_backend.py  loaders.py  log_helpers.py  nlp_additional.py  prompts.py  retrieval.py  splitters.py  storage.py
tests/: test_annotator.py  test_helpers.py  test_loaders.py  test_splitters.py  test_storage.py
tests/assets/: rust.txt  short.txt
